--- a/package.json
+++ b/package.json
@@ -14,7 +14,17 @@
     "start:auth": "yarn --cwd auth start",
     "start:navbar": "yarn --cwd navbar start",
     "start:login": "yarn --cwd login start",
-    "start:home": "yarn --cwd home start"
+    "start:home": "yarn --cwd home start",
+    "prebuild": "rm -rf deploy && mkdir deploy deploy/auth deploy/home deploy/login deploy/navbar",
+    "build": "run-s build:*",
+    "build:root-config": "yarn --cwd root-config build",
+    "build:auth": "yarn --cwd auth build",
+    "build:navbar": "yarn --cwd navbar build",
+    "build:login": "yarn --cwd login build",
+    "build:home": "yarn --cwd home build",
+    "build:cp": "cp root-config/dist/* deploy && cp auth/dist/* deploy/auth && cp home/dist/* deploy/home && cp login/dist/* deploy/login && cp navbar/dist/* deploy/navbar",
+    "preserve": "yarn build",
+    "serve": "npx serve deploy -s -n -C"
   },
   "keywords": [
     "single-spa",
