--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -3,31 +3,33 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "serve": "sirv dist -c",
+    "serve": "sirv dist -c --no-clear",
     "test": "jest",
     "format": "prettier --write ./**/*.{svelte,js}"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@testing-library/jest-dom": "^5.9.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/svelte": "^3.0.0",
-    "babel-jest": "^26.0.1",
-    "jest": "^26.0.1",
-    "prettier": "^2.0.5",
-    "prettier-plugin-svelte": "^1.1.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^6.1.0",
-    "svelte": "^3.0.0",
-    "svelte-jester": "^1.0.6"
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "postcss": "^8.2.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^1.4.2",
+    "rollup": "^2.34.2",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.31.0",
+    "svelte-jester": "^1.2.0"
   },
   "dependencies": {
     "single-spa-svelte": "^2.0.0",
-    "sirv-cli": "^0.4.4",
+    "sirv-cli": "^1.0.10",
     "svelte-routing": "^1.4.2"
   }
 }
