--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "single-spa example that shows how to use a utility module to share some application state across other microfrontends",
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "start": "lerna run start",
+    "start": "lerna run start --stream",
     "prebuild": "rm -rf deploy && mkdir deploy deploy/auth deploy/home deploy/login deploy/navbar",
     "build": "lerna run build",
-    "deploy": "yarn bootstrap && yarn build",
     "postbuild": "cp packages/root-config/dist/* deploy && cp packages/auth/dist/* deploy/auth && cp packages/home/dist/* deploy/home && cp packages/login/dist/* deploy/login && cp packages/navbar/dist/* deploy/navbar",
+    "deploy": "yarn bootstrap && yarn build",
     "preserve": "yarn build",
     "serve": "npx serve deploy -s -n -C"
   },
