--- a/packages/root-config/package.json
+++ b/packages/root-config/package.json
@@ -33,11 +33,11 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "serve": "^11.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-config-single-spa": "^1.17.6",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-config-single-spa": "^2.0.0",
+    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "single-spa": "^5.3.1",
