--- a/packages/root-config/package.json
+++ b/packages/root-config/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@example/root-config",
   "scripts": {
-    "start": "webpack-dev-server --mode=development --port 9000 --env.isLocal=true",
+    "start": "webpack serve --mode development --port 9000 --env isLocal",
+    "build": "webpack --mode production",
     "lint": "eslint src --ext js",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
-    "format": "prettier --write \"./**\"",
-    "build": "webpack --mode=production"
+    "format": "prettier --write ."
   },
   "husky": {
     "hooks": {
