--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@example/login",
   "scripts": {
-    "start": "webpack-dev-server",
-    "start:standalone": "webpack-dev-server --env.standalone",
+    "start": "webpack serve",
+    "start:standalone": "webpack serve --env standalone",
     "build": "webpack --mode=production",
-    "analyze": "webpack --mode=production --env.analyze=true",
+    "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js",
-    "format": "prettier --write \"./**\"",
+    "format": "prettier --write src/",
     "test": "cross-env BABEL_ENV=test jest",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "coverage": "cross-env BABEL_ENV=test jest --coverage"
