--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -5,31 +5,31 @@
     "start": "rollup -c -w",
     "serve": "sirv dist -c --no-clear",
     "test": "jest",
-    "format": "prettier --write ./**/*.{svelte,js}"
+    "format": "prettier --write src/**/*.{svelte,js}"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/svelte": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/svelte": "^3.0.3",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
-    "postcss": "^8.2.1",
+    "postcss": "^8.2.4",
     "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^1.4.2",
-    "rollup": "^2.34.2",
+    "prettier-plugin-svelte": "^2.1.1",
+    "rollup": "^2.38.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.31.0",
-    "svelte-jester": "^1.2.0"
+    "svelte": "^3.32.0",
+    "svelte-jester": "^1.3.0"
   },
   "dependencies": {
     "single-spa-svelte": "^2.0.0",
     "sirv-cli": "^1.0.10",
-    "svelte-routing": "^1.4.2"
+    "svelte-routing": "^1.5.0"
   }
 }
