--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "start": "webpack-dev-server",
-    "start:standalone": "webpack-dev-server --env.standalone",
+    "start": "webpack serve",
+    "start:standalone": "webpack serve --env standalone",
     "build": "webpack --mode=production",
-    "analyze": "webpack --mode=production --env.analyze=true",
+    "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js",
-    "format": "prettier --write './**'",
+    "format": "prettier --write .",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "coverage": "cross-env BABEL_ENV=test jest --coverage"
@@ -36,12 +36,11 @@
     "jest-cli": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
-    "systemjs-webpack-interop": "^2.1.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-config-single-spa": "^1.17.6",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-config-single-spa": "^2.0.0",
+    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "rxjs": "^6.6.3"
