--- a/packages/login/package.json
+++ b/packages/login/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@example/login",
   "scripts": {
-    "start": "webpack-dev-server",
-    "start:standalone": "webpack-dev-server --env.standalone",
+    "start": "webpack serve",
+    "start:standalone": "webpack serve --env standalone",
     "build": "webpack --mode=production",
-    "analyze": "webpack --mode=production --env.analyze=true",
+    "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js",
-    "format": "prettier --write \"./**\"",
+    "format": "prettier --write src/",
     "test": "cross-env BABEL_ENV=test jest",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
     "coverage": "cross-env BABEL_ENV=test jest --coverage"
@@ -41,12 +41,11 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "single-spa-react": "^3.2.0",
-    "systemjs-webpack-interop": "^2.3.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-config-single-spa-react": "^1.17.6",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^5.2.0"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-config-single-spa-react": "^2.0.0",
+    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "react": "^16.12.0",
