--- a/packages/root-config/package.json
+++ b/packages/root-config/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@example/root-config",
   "scripts": {
-    "start": "webpack-dev-server --mode=development --port 9000 --env.isLocal=true",
+    "start": "webpack serve --mode development --port 9000 --env isLocal",
+    "build": "webpack --mode production",
     "lint": "eslint src --ext js",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
-    "format": "prettier --write \"./**\"",
-    "build": "webpack --mode=production"
+    "format": "prettier --write ."
   },
   "husky": {
     "hooks": {
@@ -33,11 +33,11 @@
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "serve": "^11.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-config-single-spa": "^1.17.6",
-    "webpack-dev-server": "^3.9.0",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-config-single-spa": "^2.0.0",
+    "webpack-dev-server": "^4.0.0-beta.0",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "single-spa": "^5.3.1",
